New unlimited page

--- a/src/components/style/globing.css
+++ b/src/components/style/globing.css
@@ -272,6 +272,11 @@ a {
     padding: 190px 0;
 }
 
+h1 u {
+  text-decoration: none;
+  box-shadow: 0 -15px 0 rgba(55, 184, 223, 0.5) inset;
+}
+
 .home-title {
     font-size: 40px;
     line-height: 1.4;
