--- a/src/components/style/globing.css
+++ b/src/components/style/globing.css
@@ -615,6 +615,36 @@ h1 u {
     box-shadow: 0px 0px 20px -4px #e8e8e8;
 }
 
+.team-name .slug{
+  margin-bottom: 1em;
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+
+.team-name .slug i {
+  font-size: 1.2em;
+  margin-right: 0.5em;
+}
+
+.team-name .slug span {
+  padding-bottom: 0.5em;
+  display: inline-block;
+}
+.team-name .slug span {
+  padding-bottom: 0.5em;
+  display: inline-block;
+  position: relative;
+  top: -1px;
+}
+
+.team-name .csat{
+  font-size: 0.8em;
+  margin-left: 10px;
+  position: relative;
+  top: -1px;
+}
+
+
 
 /*********************
     8.FAQ
