--- a/src/components/style/globing.css
+++ b/src/components/style/globing.css
@@ -200,6 +200,62 @@ a {
     2.NAVBAR-CUSTOM
 **********************/
 
+#navbar-toggle input {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  margin: 0;
+  top: 0;
+  right: 0px;
+  z-index: 2; /* and place it over the hamburger */
+}
+#navbar-toggle {
+  user-select: none;
+}
+
+#navbar-toggle span {
+  display: block;
+  width: 20px;
+  height: 2px;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  position: relative;
+  background: white;
+  border-radius: 0;
+  z-index: 1;
+  transform-origin: 0 0;
+  transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.3s ease;
+}
+#navbar-toggle span {
+  transform-origin: 50% 50%;
+}
+#navbar-toggle span:nth-last-child(2) {
+  transform-origin: 50% 50%;
+}
+
+#navbar-toggle input:checked ~ div span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-4px);
+
+}
+
+#navbar-toggle input:checked ~ div span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+#navbar-toggle input:checked ~ div span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(-4px);
+  
+}
+
+#navbar-hamburger{
+  display: none;
+}
+
 .navbar-custom {
     background-color: rgb(0, 0, 0);
     padding: 20px 0px;
@@ -213,11 +269,15 @@ a {
     transition: all 0.5s ease-in-out;
 }
 
+.navbar-custom .container{
+  position: relative;
+}
+
 .navbar-custom .navbar-nav li a {
     color: rgba(255, 255, 255, 0.5) !important;
     font-size: 14px;
     background-color: transparent !important;
-    margin: 0 7px;
+    margin: 0;
     letter-spacing: 0.05em;
     line-height: 24px;
     transition: all 0.5s;
@@ -228,46 +288,35 @@ a {
     text-transform: uppercase;
 }
 
-.navbar-custom .nav-social li a {
-    color: #fff !important;
-}
-
-.navbar-custom .navbar-toggler {
-    color: #fff;
-    font-size: 35px;
-    padding: 0px;
-}
-
 .navbar-custom .navbar-nav li a:hover,
 .navbar-custom .navbar-nav li a:active,
 .navbar-custom .navbar-nav li.active a {
     color: #fff !important;
 }
 
-.navbar-custom.nav-sticky {
-    background-color: #1a1a1a !important;
-    padding: 15px 0px;
+@media (max-width: 992px){
+  #navbar-hamburger{
+    display: block;
+  }
+  #navbar-toggle input:checked ~ #navbar-menu {
+    height: 100vh;
+  }
+  #navbar-menu{
+    background: #000;
+    height: 0;
+    overflow:hidden;
+    transition: height 0.3s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+  .navbar-custom .navbar-nav li{
+    margin-top: 1.4em;
+  }
+  .navbar-custom .navbar-nav li a{
+    margin-top: 1em;
+    font-size: 1.4em;
+  }
 }
 
-.nav-social .facebook {
-    border: 2px solid #5f5f5f;
-    border-radius: 50%;
-    height: 40px;
-    display: inline-block;
-    width: 40px;
-    text-align: center;
-    line-height: 38px;
-}
 
-.nav-social .nav-number span {
-    font-size: 13px;
-}
-
-.nav-social .nav-number i {
-    position: relative;
-    top: 3px;
-    font-size: 18px;
-}
 
 
 /*********************
@@ -782,7 +831,8 @@ textarea.form-control {
         padding: 10px 0px !important;
     }
     .navbar-custom .container {
-        width: 85%;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     .about-border-left {
         border: none;
