New unlimited page

--- a/src/components/style/globing.css
+++ b/src/components/style/globing.css
@@ -249,7 +249,7 @@ a {
 }
 #navbar-toggle input:checked ~ div span:nth-last-child(2) {
   transform: rotate(-45deg) translate(-4px);
-  
+
 }
 
 #navbar-hamburger{
@@ -330,7 +330,7 @@ a {
     padding: 190px 0;
 }
 
-h1 u {
+u {
   text-decoration: none;
   box-shadow: 0 -15px 0 rgba(55, 184, 223, 0.5) inset;
 }
