--- a/src/components/style/default.colors.css
+++ b/src/components/style/default.colors.css
@@ -13,6 +13,7 @@
   background: rgb(182,0,106);
   background: linear-gradient(130deg, rgba(182,0,106,1) 0%, rgba(230,57,70,1) 100%);
   border: 0px;
+  border-bottom: 3px solid #931239;
   text-transform: none;
 }
 
