Font size tweaks to the button

--- a/src/components/style/default.colors.css
+++ b/src/components/style/default.colors.css
@@ -31,14 +31,14 @@
 .contact-border,
 .back-to-top:hover,
 .plan-icon {
-    background-color: #37b8df;
+    background-color: #457B9D;
 }
 
 .btn-custom,
 .registration-input-box:focus,
 .form-control:focus,.team-social li a:hover,
 .plan-icon  {
-    border-color: #37b8df ;
+    border-color: #457B9D ;
 }
 
 .btn-custom:hover,
